--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 # Ignore bundler config.
 /.bundle
 
-ci-demo.zip
+m3.zip
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
