--- a/config/database.yml
+++ b/config/database.yml
@@ -3,23 +3,45 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
+
+mysql: &mysql
+  adapter: mysql2
+  database: m3
+  reconnect: true
+  port: 3306
+
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+  <<: *mysql
+  username: root
+  password: wxytest1
+  host: 127.0.0.1
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+
+qa:
+  <<: *mysql
+  username: root
+  password: wxytest1
+  host: 127.0.0.1
+  
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+  <<: *mysql
+  username: root
+  password: wxytest1
+  host: 127.0.0.1
+
+#production:
+#  <<: *mysql
+#  username: zaotai2
+#  password: wangxinyu1
+#  database: m3_prod
+#  host: 127.0.0.1
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  <<: *mysql
+  username: <%= ENV['M3_DB_USER'] %>
+  password: <%= ENV['M3_DB_PASSWORD'] %>
+  host: <%= ENV['M3_DB_HOST'] %>
+  database: <%= ENV['M3_DB_NAME'] %>
