for nginx config. see this: http://stackoverflow.com/questions/22272943/nginx-cannot-find-unix-socket-file-with-unicorn-no-such-file-or-directory

--- a/scripts/m3.conf
+++ b/scripts/m3.conf
@@ -1,5 +1,5 @@
 upstream m3_backend {
-	server unix:/tmp/.m3.unicorn.sock fail_timeout=0;
+	server unix:/run/.m3.unicorn.sock fail_timeout=0;
   }
 
 server {
