--- a/scripts/m3.conf
+++ b/scripts/m3.conf
@@ -8,25 +8,33 @@ server {
 
     server_name  admin.shihuiping.com;
 
- location / {
+    location / {
 
-      proxy_redirect     off;
+        proxy_redirect     off;
 
-      proxy_set_header   Host $host;
+        proxy_set_header   Host $host;
+    
+        proxy_set_header   X-Forwarded-Host $host;
 
-      proxy_set_header   X-Forwarded-Host $host;
+        proxy_set_header   X-Forwarded-Server $host;
 
-      proxy_set_header   X-Forwarded-Server $host;
+        proxy_set_header   X-Real-IP        $remote_addr;
 
-      proxy_set_header   X-Real-IP        $remote_addr;
+        proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
 
-      proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+        proxy_buffering    on;
 
-      proxy_buffering    on;
+        proxy_pass         http://m3_backend;
 
-      proxy_pass         http://m3_backend;
-
- }
+    }
+    location ~ ^/(assets|images|javascripts|stylesheets|system)/  {
+        root /opt/works/meili03/public;
+        gzip on;
+        gzip_http_version 1.0;
+        gzip_types text/plain application/x-javascript text/css text/javascript;
+        expires max;
+        break;
+    }
 
     #error_page  404              /404.html;
 
