--- a/scripts/m3.conf
+++ b/scripts/m3.conf
@@ -13,7 +13,7 @@ server {
         proxy_redirect     off;
 
         proxy_set_header   Host $host;
-    
+
         proxy_set_header   X-Forwarded-Host $host;
 
         proxy_set_header   X-Forwarded-Server $host;
@@ -28,7 +28,7 @@ server {
 
     }
     location ~ ^/(assets|images|javascripts|stylesheets|system)/  {
-        root /opt/works/meili03/public;
+        root /opt/works/m3/public;
         gzip on;
         gzip_http_version 1.0;
         gzip_types text/plain application/x-javascript text/css text/javascript;
