--- a/scripts/m_a_rb.conf
+++ b/scripts/m_a_rb.conf
@@ -1,12 +1,12 @@
-upstream m3_backend {
-	server unix:/run/.m3.unicorn.sock fail_timeout=0;
-  }
+upstream m_a_rb_backend {
+	server unix:/var/run/.m_a_rb.unicorn.sock fail_timeout=0;
+}
 
 server {
 
     listen       80;
 
-    server_name  admin.shihuiping.com;
+    server_name  t.meimiemie.com;
 
     location / {
 
@@ -24,16 +24,25 @@ server {
 
         proxy_buffering    on;
 
-        proxy_pass         http://m3_backend;
+        proxy_pass         http://m_a_rb_backend;
 
     }
-    location ~ ^/(assets|images|javascripts|stylesheets|system)/  {
-        root /opt/works/m3/public;
-        gzip on;
-        gzip_http_version 1.0;
-        gzip_types text/plain application/x-javascript text/css text/javascript;
-        expires max;
-        break;
+
+    location ~ ^/(assets|images|javascripts|stylesheets|system|original|fonts|pictures)/  {
+         root /opt/works/m_a_rb/public;
+         gzip on;
+         gzip_http_version 1.0;
+         gzip_types text/plain application/x-javascript text/css text/javascript;
+         expires max;
+         break;
+    }
+
+    location ~ ^/favicon.ico {
+        root /opt/works/m_a_rb;
+    }
+
+    location ~ ^/apple-touch-icon.*.png {
+        root /opt/works/m_a_rb/public;
     }
 
     #error_page  404              /404.html;
